# agents

1_foundations/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb  README.md  README_TBD.md  app.py
1_foundations/me/: summary.txt
2_openai/: 1_lab1.ipynb  2_1_jp.ipynb  2_lab2.ipynb
2_openai/community_contributions/deep_research_jp/: clarifiing_questions.py  deep_research.py  email_agent.py  planner_agent.py  report_agent.py  research_manager.py  search_agent.py  test.ipynb
3_crew/JP/coder_crew/: README.md  pyproject.toml
3_crew/JP/coder_crew/output/: .~lock.accounts.py_design.md#  accounts.py  accounts.py_design.md  app.py  test_accounts.py
3_crew/JP/coder_crew/src/coder_crew/: crew.py  main.py
3_crew/JP/coder_crew/src/coder_crew/config/: agents.yaml
3_crew/JP/debate/debate/: ouput.txt  report.md
3_crew/JP/debate/debate/output/: oppose.md  propose.md
3_crew/JP/debate/debate/src/debate/: crew.py  main.py
3_crew/JP/financial_researcher/output/: report.md
3_crew/JP/financial_researcher/src/financial_researcher/: crew.py  main.py
3_crew/JP/stock_picker/memory/: long_term_memory.db
3_crew/JP/stock_picker/output/: research_report:json  trending_companies.json
3_crew/JP/stock_picker/src/stock_picker/: crew.py  main.py
3_crew/JP/stock_picker/src/stock_picker/config/: agents.yaml  tasks.yaml
3_crew/JP/stock_picker/src/stock_picker/tools/: push_notification_tool.py
4_langgraph/: 1_lab1.ipynb
4_langgraph/JP/: lab1.ipynb  lab2.ipynb  lab3.ipynb  langgraph2.py
4_langgraph/community_contributions/SideKick(Ugraded)/: .~lock.readme.md#
(+2 files in other folders)
